--- a/bgruening.yaml
+++ b/bgruening.yaml
@@ -471,3 +471,10 @@ tools:
   - name: pharmcat
     owner: bgruening
     tool_panel_section_label: Variant Calling
+
+
+# RNA 
+
+  - name: infer_rnaformer
+    owner: rnateam
+    tool_panel_section_label: RNA 
